[gd_scene format=3 uid="uid://ccc7iirday18r"]

[ext_resource type="Script" uid="uid://bv0agf1qfu7hp" path="res://Root/Root.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://lip7djc6lsa2" path="res://Player/Player.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://dec5xbafkfnnw" path="res://Meteor/Meteor.tscn" id="4"]

[node name="Root" type="Node" unique_id=1855274137]
script = ExtResource("1")

[node name="UI" type="Control" parent="." unique_id=1583461810]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OperationPanel" type="VBoxContainer" parent="UI" unique_id=851626751]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -232.0
grow_horizontal = 2
grow_vertical = 0

[node name="Operation" type="Label" parent="UI/OperationPanel" unique_id=891347642]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "x + y = ?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Numpad" type="VBoxContainer" parent="UI/OperationPanel" unique_id=650112914]
layout_mode = 2
alignment = 1

[node name="Row0" type="HBoxContainer" parent="UI/OperationPanel/Numpad" unique_id=684702587]
layout_mode = 2
alignment = 1

[node name="7" type="Button" parent="UI/OperationPanel/Numpad/Row0" unique_id=390886150]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "7"

[node name="8" type="Button" parent="UI/OperationPanel/Numpad/Row0" unique_id=29174020]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "8"

[node name="9" type="Button" parent="UI/OperationPanel/Numpad/Row0" unique_id=525305461]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "9"

[node name="Row1" type="HBoxContainer" parent="UI/OperationPanel/Numpad" unique_id=1864334466]
layout_mode = 2
alignment = 1

[node name="4" type="Button" parent="UI/OperationPanel/Numpad/Row1" unique_id=1577651619]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "4"

[node name="5" type="Button" parent="UI/OperationPanel/Numpad/Row1" unique_id=585650598]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "5"

[node name="6" type="Button" parent="UI/OperationPanel/Numpad/Row1" unique_id=1310364999]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "6"

[node name="Row2" type="HBoxContainer" parent="UI/OperationPanel/Numpad" unique_id=1044199745]
layout_mode = 2
alignment = 1

[node name="1" type="Button" parent="UI/OperationPanel/Numpad/Row2" unique_id=1336401245]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "1"

[node name="2" type="Button" parent="UI/OperationPanel/Numpad/Row2" unique_id=2097546785]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "2"

[node name="3" type="Button" parent="UI/OperationPanel/Numpad/Row2" unique_id=395408156]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "3"

[node name="Row3" type="HBoxContainer" parent="UI/OperationPanel/Numpad" unique_id=892847002]
layout_mode = 2
alignment = 1

[node name="0" type="Button" parent="UI/OperationPanel/Numpad/Row3" unique_id=1882296664]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "0"

[node name="Skip" type="Button" parent="UI" unique_id=152159847]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -68.0
offset_bottom = 31.0
grow_horizontal = 0
focus_mode = 0
theme_override_font_sizes/font_size = 24
text = "game_button_skips"

[node name="World" type="Node2D" parent="." unique_id=1772586919]

[node name="Lasersas" type="Node2D" parent="World" unique_id=283330652]

[node name="Player" parent="World" unique_id=1872658002 instance=ExtResource("3")]
position = Vector2(150, 198)

[node name="Meteor" parent="World" unique_id=1321051757 instance=ExtResource("4")]
position = Vector2(874, 198)

[node name="Timer" type="Timer" parent="." unique_id=966960628]
autostart = true

[connection signal="pressed" from="UI/Skip" to="." method="Skip_pressed"]
[connection signal="timeout" from="Timer" to="." method="timeout"]
